# pricing_service

./: pyproject.toml
pricing_service/: alert_updater.py  app.py  learning.py
pricing_service/common/: common.py  constants.py  database.py  parsers.py
pricing_service/models/: alert.py  item.py  model.py  store.py
pricing_service/templates/: base.html  new_item.html
pricing_service/templates/alerts/: index.html  new_alert.html
pricing_service/templates/items/: index.html  new_item.html
pricing_service/views/: alerts.py  app.py  items.py
tests/: test_pricing_service.py
